@@ -722,7 +722,7 @@ irccd.conf file in sections [server].</p></div>
 <div class="listingblock">
 <div class="title">Example</div>
 <div class="content monospaced">
-<pre>CONNECT wanadoo chat.wanadoo.fr 8765 ident:superjean ssl:off</pre>
+<pre>CONNECT wanadoo chat.wanadoo.fr 8765 ident:superjean ssl:off\n</pre>
 </div></div>
 </div>
 <div class="sect2">
@@ -1104,7 +1104,7 @@ the rights to do that.</p></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-27 15:09:53 CET
+Last updated 2013-12-27 15:11:14 CET
 </div>
 </div>
 </body>
