@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="generator" content="AsciiDoc 8.6.9">
-<title>Irccd 1.0 user guide</title>
+<title>Irccd 1.1 user guide</title>
 <style type="text/css">
 /*
  * AsciiDoc 'volnitsky' theme for xhtml11 and html5 backends.
@@ -622,7 +622,7 @@ asciidoc.install(2);
 </head>
 <body class="article">
 <div id="header">
-<h1>Irccd 1.0 user guide</h1>
+<h1>Irccd 1.1 user guide</h1>
 <span id="author">Demelier David</span><br>
 <span id="email" class="monospaced">&lt;<a href="mailto:demelier.david@gmail.com">demelier.david@gmail.com</a>&gt;</span><br>
 <span id="revdate">June, 8 2013</span>
@@ -678,6 +678,11 @@ Lua 5.2, <a href="http://lua.org">http://lua.org</a> (optional).
 </li>
 <li>
 <p>
+LuaJIT, <a href="http://luajit.org">http://luajit.org</a> (optional).
+</p>
+</li>
+<li>
+<p>
 C++11 support.
 </p>
 </li>
@@ -699,18 +704,23 @@ replaced with the current version. Go to that directory, then type the
 following commands:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0] $ mkdir _build_
-markand@localhost [irccd-1.0] $ cd _build_
-markand@localhost [irccd-1.0/_build_] $ cmake ..
-markand@localhost [irccd-1.0/_build_] $ make
-markand@localhost [irccd-1.0/_build_] $ sudo make install</pre>
+<pre>markand@localhost [irccd-1.1] $ mkdir _build_
+markand@localhost [irccd-1.1] $ cd _build_
+markand@localhost [irccd-1.1/_build_] $ cmake ..
+markand@localhost [irccd-1.1/_build_] $ make
+markand@localhost [irccd-1.1/_build_] $ sudo make install</pre>
 </div></div>
 <div class="paragraph"><p>This is the quick way of compiling and installing. It&#8217;s also possible to set
 some options to customize the build.</p></div>
+<div class="paragraph"><div class="title">Switching to LuaJIT</div><p>You can use LuaJIT instead of vanilla Lua 5.2</p></div>
+<div class="listingblock">
+<div class="content monospaced">
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DWITH_LUA52=Off -DWITH_LUAJIT=On</pre>
+</div></div>
 <div class="paragraph"><div class="title">Disabling Lua</div><p>You can disable Lua support.</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DWITH_LUA=Off</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DWITH_LUA52=Off -DWITH_LUAJIT=Off</pre>
 </div></div>
 <div class="paragraph"><p>When disabling Lua, the IRC bot can still be used as a message relayer, so you
 can still use <a href="#irccdctl">irccdctl</a> to manage irccd.</p></div>
@@ -726,17 +736,17 @@ you plan to use Lua, do the above command and switch Off to On.</td>
 <div class="paragraph"><div class="title">Disable Lua documentation</div><p>If you don&#8217;t want to install Lua API documentation, use the following command.</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DWITH_LDOC=Off</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DWITH_LDOC=Off</pre>
 </div></div>
 <div class="paragraph"><div class="title">Disable user guides</div><p>You can disable installation of user guides.</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DWITH_DOC=Off</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DWITH_DOC=Off</pre>
 </div></div>
 <div class="paragraph"><div class="title">Disable manual pages</div><p>On Windows, man pages are not really useful, you can also disable them</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DWITH_MAN=Off</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DWITH_MAN=Off</pre>
 </div></div>
 <div class="paragraph"><div class="title">Changing the default installation path</div><p>Sometimes, you may need to install irccd over other place, for that, you can
 specify the prefix where to install files. On unix systems, it&#8217;s usually
@@ -744,14 +754,14 @@ specify the prefix where to install files. On unix systems, it&#8217;s usually
 <div class="paragraph"><p>To change this, use the following:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DCMAKE_INSTALL_PREFIX=/opt/some/directory</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DCMAKE_INSTALL_PREFIX=/opt/some/directory</pre>
 </div></div>
 <div class="paragraph"><div class="title">Changing the man paths</div><p>By default, irccd use ${PREFIX}/share/man for manual pages. Some systems use
 different one.</p></div>
 <div class="paragraph"><p>For example, on FreeBSD the typical use would be:</p></div>
 <div class="listingblock">
 <div class="content monospaced">
-<pre>markand@localhost [irccd-1.0/_build_] $ cmake .. -DMANDIR=/usr/local/man</pre>
+<pre>markand@localhost [irccd-1.1/_build_] $ cmake .. -DMANDIR=/usr/local/man</pre>
 </div></div>
 </div>
 </div>
@@ -1981,7 +1991,7 @@ quotes.</p></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-27 14:57:23 CET
+Last updated 2013-12-28 19:43:20 CET
 </div>
 </div>
 </body>
