@@ -21,6 +21,11 @@ project(irccd)
 
 # Optional Lua support
 option(WITH_LUA "Build with Lua plugin support" On)
+option(WITH_LUAJIT "Build with LuaJIT plugin support" Off)
+
+if (WITH_LUA AND WITH_LUAJIT)
+	message(FATAL_ERROR "Please select WITH_LUA or WITH_LUAJIT")
+endif ()
 
 # Use bundled libircclient or not
 option(WITH_BUNDLE_IRCCLIENT "Build with bundled libircclient" On)
@@ -39,10 +44,14 @@ set(SOURCES
 
 set(LUA_SUPPORT "disabled" PARENT_SCOPE)
 
-if (WITH_LUA)
-	find_package(Lua52)
+if (WITH_LUA OR WITH_LUAJIT)
+	if (WITH_LUA)
+		find_package(Lua52)
+	elseif (WITH_LUAJIT)
+		find_package(LuaJIT)
+	endif ()
 
-	if (LUA52_FOUND)
+	if (LUA52_FOUND OR LUAJIT_FOUND)
 		add_subdirectory(plugins)
 
 		# Optional Lua sources
@@ -89,21 +98,19 @@ if (WITH_LUA)
 		list(
 			APPEND
 			INCLUDES
-			${LUA_INCLUDE_DIR}
 			${CMAKE_CURRENT_SOURCE_DIR}
 		)
 
-		# Optional Lua libraries
-		list(
-			APPEND
-			LIBRARIES
-			${LUA_LIBRARIES}
-		)
-
-		set(LUA_SUPPORT "enabled" PARENT_SCOPE)
-		set(USE_LUA 1 PARENT_SCOPE)		# for config.h
+		if (WITH_LUA52)
+			list(APPEND INCLUDES ${LUA52_INCLUDE_DIR})
+			list(APPEND LIBRARIES ${LUA52_LIBRARIES})
+			set(LUA_SUPPORT "enabled (Lua 5.2)" PARENT_SCOPE)
+		elseif (WITH_LUAJIT)
+			list(APPEND INCLUDES ${LUAJIT_INCLUDES_DIR})
+			list(APPEND LIBRARIES ${LUAJIT_LIBRARIES})
+			set(LUA_SUPPORT "enabled (LuaJIT)" PARENT_SCOPE)
+		endif ()
 	endif ()
-
 endif ()
 
 if (WITH_BUNDLE_IRCCLIENT)
