@@ -15,7 +15,8 @@ CURRENT
   * Server:whois and server:names generate a new events instead of callback,
   * Support of connecting and disconnecting at runtime,
   * Plugin has more information, getHome() and getName() are deprecated,
-  * Split irccd.util into irccd.fs and irccd.system.
+  * Split irccd.util into irccd.fs and irccd.system,
+  * Added support for LuaJIT.
 
 1.0.2 November 1, 2013
 ---------------------------------------
